--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
 <div id="fig-month" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-month-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="bilder/monthj.png" class="img-fluid figure-img">
+<img src="Bilder/monthj.png" class="img-fluid figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-month-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Frånvaro uppdelat efter månad
